# cppcode

./: CMakeLists.txt  README.md
include/agent/: QueryEngine.hpp
include/api/: ClaudeClient.hpp  Types.hpp
include/tools/: BashTool.hpp  FileEditTool.hpp  FileReadTool.hpp  FileWriteTool.hpp  GlobTool.hpp  GrepTool.hpp  Tool.hpp
include/tui/: App.hpp
include/utils/: Config.hpp  Logger.hpp  StringUtils.hpp
src/: main.cpp
src/agent/: QueryEngine.cpp
src/api/: ClaudeClient.cpp  Types.cpp
src/tools/: BashTool.cpp  FileEditTool.cpp  FileReadTool.cpp  FileWriteTool.cpp  GlobTool.cpp  GrepTool.cpp  Tool.cpp
src/tui/: App.cpp
src/utils/: Config.cpp  Logger.cpp  StringUtils.cpp
